- NEW: In the settings dialog, network page. A new button to edit the
       Subversion servers file. (Stefan)
- BUG: When fetching files to diff, the progress dialog shown while fetching
       the files from the repository always showed revision 1 instead of the
       real revision where the file was fetched from. (Stefan)
- BUG: The file system watcher in the status cache wasn't monitoring all
       folders it should have. (Stefan)
- BUG: Fixed a crash when showing a diff against BASE and the status of the
       file couldn't be read. (Stefan)

Version 1.2.2
- NEW: Display a summary of our own license at start of install,
       instead of the Subversion license. (Simon)
- NEW: Icon sets (except for the default one) are now optional features; 
       the user can choose whether or not to install them, during setup. 
       (Pete)
- NEW: Navigating to the previous/next difference in TortoiseMerge also
       shows the first line of the difference in the detailed diff at
       the bottom. (Stefan)
- NEW: Marking multiple files as resolved at once. Selecting a folder
       will show a dialog with all conflicted files below to be marked
       as resolved. See issue #117. (Stefan)
- NEW: SubWCRev has a new option '-e' to include externals if they're from
       the same repository. See issue #132. (Stefan)
- NEW: Checking/Unchecking multiple items at once: select multiple files and
       checking/unchecking one of them unchecks/checks all of them.
       See issue 118. (Stefan)
- NEW: The Spellchecker ignores now numbers and doesn't mark them
       as missspelled anymore. See issue #145. (Stefan)
- NEW: The context menu is now shown for shortcuts too. Once for the shortcut
       (*.lnk) file itself and once for the target the shortcut points to.
       See issue #146. (Stefan)
- NEW: Option to switch to the newly created branch/tag in the branch/tag
       dialog. See issue #150. (Stefan)
- NEW: Button in TortoiseMerge to switch the left and right view.